design taking form

--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ nav{
   display: inline-block;
   padding:1%;
 }
+
+h1{
+	line-height: 100%;
+	height: 100%;
+}
 /*  smaller sections of content */
 .supplement{
 	display:flex;
@@ -90,17 +95,19 @@ nav{
 	margin:5% auto; 
 	width: 90%;
 	padding:3%;
-	background-color:#618685;
+	background-image: url(pics/meeting.jpeg)
+
 }
 #landing img{
 	margin-left: 4%;
 	margin-right: 5%;
 }
+
 /* 1st set of half page sections  */
 #content{
 	display:flex;
 	flex-direction: row;
-	width:100%;
+	width:90%;
 	padding-left: 10%;
 	padding-right: 10%;
 }
@@ -108,10 +115,72 @@ nav{
 #support{
 	display:flex;
 	flex-direction: row;
-	width:100%;
+	width:90%;
 	padding-left: 10%;
 	padding-right: 10%;
+}
+/*  three part  */
+#connect{
+	display:flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 90%;
+	height:100%;
+	margin-top:5%;
+}
+#reach1{
+	color:#80ced6;
+	display:flex;
+	flex-direction: column;
+	height: 80%;
+	width:33%;
+	background-image: url(pics/gpsmall.jpeg);
+	background-size: cover;
+	background-position: center;
 	
+
+}
+#reach2{
+	color:#80ced6;
+	display:flex;
+	flex-direction: column;
+	height: 80%;
+	width:33%;
+	background-image: url(pics/cloudsmall.jpeg);
+	background-size: cover;
+	background-position: center;
+}
+#reach3{
+	color:#80ced6;
+	display:flex;
+	flex-direction: column;
+	height: 80%;
+	width:33%;
+	background-image: url(pics/global.jpeg);
+	background-size: cover;
+	background-position: center;
+}
+#reach1 p{
+
+	font-size: larger;
+    display: flex;
+    height: 300px;
+    align-self: center;
+    flex-direction: column;
+}
+#reach2 p{
+	font-size: larger;
+    display: flex;
+    height: 300px;
+    align-self: center;
+    flex-direction: column;
+}
+#reach3 p{
+	font-size: larger;
+    display: flex;
+    height: 300px;
+    align-self: center;
+    flex-direction: column;
 }
 /* footer...  */
 #foot{
