solved photo with text drop problem

--- a/style.css
+++ b/style.css
@@ -112,12 +112,49 @@ h1{
 	padding-right: 10%;
 }
 /* 2nd set of half page sections  */
-#support{
+/* temporary theft */
+.collapsible {
+    background-color: #FFF;
+    color: black;
+    cursor: pointer;
+    padding: 0;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+}
+
+.active, .collapsible:hover {
+    background-color: #555;
+}
+
+.content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+}
+.support{
 	display:flex;
 	flex-direction: row;
 	width:90%;
 	padding-left: 10%;
 	padding-right: 10%;
+	cursor: pointer;
+	border: none;
+    outline: none;
+    transition: 0.4s;
+}
+.active, .support:hover {
+    background-color: #ccc;
+}
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.2s ease-out;
 }
 /*  three part  */
 #connect{
