--- a/style.css
+++ b/style.css
@@ -30,18 +30,7 @@ HEX: #618685
 #e9ece5
 #b3c2bf
 #3b3a36
-
-/*  set up page  */
-html, body {    
-    height: 100%;    
-    margin: 0;  
-}    
-body {          
-    align-items: center;        
-    display: flex; 
-    flex-direction: column; 
-}
-ul{
+/*ul{
 	display:flex;
 	flex-direction: row;
 	list-style-type: none;
@@ -56,11 +45,73 @@ nav{
   display: inline-block;
   padding:1%;
 }
+*/
 
-h1{
-	line-height: 100%;
-	height: 100%;
+/*  set up page  */
+html, body {    
+    height: 100%;    
+    margin: 0;  
+}    
+body {          
+    align-items: center;        
+    display: flex; 
+    flex-direction: column; 
 }
+
+
+#headBar {
+	display:block;
+	flex-direction: column;
+	list-style-type: none;
+	width:100%;
+	text-align: center;
+	background: #c0dfd9;
+	padding: 10px 0 10px 0;
+	text-align: center;
+	font-size:2em;
+	line-height: 1em;
+	height: 60px;
+	overflow: hidden;
+	-webkit-transition: height 0.5s linear;
+	-moz-transition: height 0.5s linear;
+	transition: height 0.5s linear;
+}
+#headBar a {
+	color: #fefbd8;
+	font-size:2em;
+	line-height: 1.25em;
+	text-decoration: none;
+	opacity: 0.5;
+	font-weight: bold;
+}
+#headBar a:hover {
+	opacity: 1;
+}
+ 
+#nav {
+	display:block;
+	flex-direction: row;
+	list-style-type: none;
+	color: #fefbd8;
+	width:100%;
+	background-color: #c0dfd9;
+	font-weight: bold;
+	padding: 8px 0; 
+	font-size: 1em;
+	text-align: center;
+	text-shadow: 1px 1px 0 #444;
+}
+#nav a {
+  color: #fff;
+  font-size: 2em;
+  text-decoration: none;
+  opacity: 0.5;
+  text-shadow: none;
+}
+#nav a:hover { opacity: 1; }
+ 
+#headBar:hover { height: 100%; }
+
 /*  smaller sections of content */
 .supplement{
 	display:flex;
