--- a/style.css
+++ b/style.css
@@ -30,22 +30,6 @@ HEX: #618685
 #e9ece5
 #b3c2bf
 #3b3a36
-/*ul{
-	display:flex;
-	flex-direction: row;
-	list-style-type: none;
-	color: #fefbd8;
-	width:100%;
-}
-nav{
-	width:100%;
-	text-align: center;
-}
-#nav li {
-  display: inline-block;
-  padding:1%;
-}
-*/
 
 /*  set up page  */
 html, body {    
@@ -57,18 +41,21 @@ body {
     display: flex; 
     flex-direction: column; 
 }
-
+nav{
+	width:100%;
+	text-align: center;
+}
 
 #headBar {
 	display:block;
-	flex-direction: column;
+	flex-direction: row;
 	list-style-type: none;
 	width:100%;
 	text-align: center;
 	background: #c0dfd9;
 	padding: 10px 0 10px 0;
 	text-align: center;
-	font-size:2em;
+	font-size:1.5em;
 	line-height: 1em;
 	height: 60px;
 	overflow: hidden;
@@ -96,7 +83,8 @@ body {
 	width:100%;
 	background-color: #c0dfd9;
 	font-weight: bold;
-	padding: 8px 0; 
+	margin:0 auto;
+	padding: 8px 5px; 
 	font-size: 1em;
 	text-align: center;
 	text-shadow: 1px 1px 0 #444;
