--- a/style.css
+++ b/style.css
@@ -32,10 +32,7 @@ HEX: #618685
 #3b3a36
 
 /*  set up page  */
-html, body {    
-    height: 100%;    
-    margin: 0;  
-}    
+   
 body {          
     align-items: center;        
     display: flex; 
@@ -43,9 +40,10 @@ body {
 }
 nav{
 	width:100%;
+	height:2%;
 	text-align: center;
 }
-
+/* navigation  */
 #headBar {
 	display:block;
 	flex-direction: row;
@@ -55,7 +53,7 @@ nav{
 	background: #c0dfd9;
 	padding: 10px 0 10px 0;
 	text-align: center;
-	font-size:1.5em;
+	font-size:1.25em;
 	line-height: 1em;
 	height: 60px;
 	overflow: hidden;
@@ -66,7 +64,7 @@ nav{
 #headBar a {
 	color: #fefbd8;
 	font-size:2em;
-	line-height: 1.25em;
+	line-height: 1em;
 	text-decoration: none;
 	opacity: 0.5;
 	font-weight: bold;
@@ -80,25 +78,64 @@ nav{
 	flex-direction: row;
 	list-style-type: none;
 	color: #fefbd8;
-	width:100%;
+	height:200px;
 	background-color: #c0dfd9;
 	font-weight: bold;
 	margin:0 auto;
 	padding: 8px 5px; 
 	font-size: 1em;
+	line-height: 1em;
 	text-align: center;
 	text-shadow: 1px 1px 0 #444;
 }
-#nav a {
+/*#nav a {
   color: #fff;
   font-size: 2em;
   text-decoration: none;
   opacity: 0.5;
   text-shadow: none;
-}
+}*/
 #nav a:hover { opacity: 1; }
+
+#nav li{
+	margin-top:0;
+	margin-bottom:0;
+	height:5%;
+}
+
+#nav li a {
+  display: block;
+  color: #fefbd8;
+  font-size: 2rem;
+  line-height: 1em;
+  width:25%;
+  border: 2px solid transparent;
+  margin:3% 37%;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+ #nav li a:hover {
+  border: 2px solid #fefbd8;
+}
+
  
 #headBar:hover { height: 100%; }
+
+
+
+/*  photo banner */
+#landing{
+	margin:5% auto; 
+	width: 90%;
+	padding:3%;
+	background-image: url(pics/meeting.jpeg)
+
+}
+#landing img{
+	margin-left: 4%;
+	margin-right: 5%;
+}
 
 /*  smaller sections of content */
 .supplement{
@@ -117,30 +154,6 @@ nav{
     max-height: 100%;
 }
 
-.menu-open {
-  transform: translate(-230px, 0);
-}
-
-/* navigation  */
-#headBar{
-	display: flex;
-	flex-direction: row;
-	width: 100%;
-	background-color: #c0dfd9;
-
-}
-/*  photo banner */
-#landing{
-	margin:5% auto; 
-	width: 90%;
-	padding:3%;
-	background-image: url(pics/meeting.jpeg)
-
-}
-#landing img{
-	margin-left: 4%;
-	margin-right: 5%;
-}
 
 /* 1st set of half page sections  */
 #content{
@@ -195,7 +208,7 @@ nav{
     max-height: 0;
     transition: max-height 0.2s ease-out;
 }
-/*  three part  */
+/*  triptych */
 #connect{
 	display:flex;
 	flex-direction: row;
@@ -263,47 +276,6 @@ nav{
 
 }
 
-/*   special menu edits  */
-#nav li a {
-  display: block;
-  color: #fefbd8;
-  font-size: 1rem;
-  border: 2px solid transparent;
-  margin:10% 10%;
-  text-decoration: none;
-  transition: all 0.3s;
-}
 
- #nav li a:hover {
-  border: 2px solid #fefbd8;
-}
 
-/* Burger */
- .toggle {
-  display: none;
-  position: absolute;
-  left: 0;
-  top: 0;
-  cursor: pointer;
-  background: rgba(0, 0, 0, 0.6);
-  padding: 15px 15px 10px;
-}
-.toggle .bar1,
-.toggle .bar2,
-.toggle .bar3 {
-  width: 25px;
-  height: 2px;
-  background: #FFF;
-  margin-bottom: 8px;
-  transition: all 0.6s;
-}
-/* Change it to an X */
-#nav.open .toggle .bar1 {
-  transform: rotate(45deg) translate(8px, 7px);
-}
- #nav.open .toggle .bar2 {
-  opacity: 0;
-}
- #nav.open .toggle .bar3 {
-  transform: rotate(-45deg) translate(7px, -6px);
-}
+
