--- a/style.css
+++ b/style.css
@@ -263,14 +263,25 @@ nav{
 /* Mobile Responsive Phone */
 
 @media all and (max-width: 767px){
-#headBar {}
-#headBar a {}
-#nav{}
-#nav li{}
-#nav li a{}
-.supplement{}
-#content{}
-.collapsible {}
-.content {}
 
+#nav li a{
+	margin:10% 37%;
+}
+.supplement{
+	width:100%;
+	margin-right:5%;		
+}
+.support{
+	padding:5%;
+	flex-direction: column;
+}
+#connect{
+	flex-direction: column;
+	width:100%;
+	height:100%;
+	margin:0 auto;
+}
+#reach1 , #reach2 , #reach3{
+	width:100%;
+	padding:0;
 }
